feat: reset pass
